# eyrc-24-25-warehouse-drone

swift_pico/: CMakeLists.txt  package.xml
swift_pico/config/: drone_parameters.yaml  pid_values.yaml  setpoint.yaml
swift_pico/include/swift_pico/: utils.hpp
swift_pico/launch/: task_1b_submission_cpp.launch.py
swift_pico/src/: drone_tf_broadcaster.cpp  pico_controller.cpp  teleop_drone.py
